# dtcc-wrapper-spade

./: .gitignore  CLAUDE.MD  adapter_spade.py  adapter_spade_native.py  mesh_bench_harness.py  testcase.txt
.github/workflows/: wheels.yml
cppspade/: CMakeLists.txt  Cargo.toml  README.md
cppspade/examples/: CMakeLists.txt  intersecting_constraints.cpp  polygon_with_holes.cpp  simple_triangulation.cpp
cppspade/include/: spade_ffi.h  spade_wrapper.h
cppspade/src/: lib.rs  spade_wrapper.cpp
pyspade/: Cargo.toml  README.md  pyproject.toml
spade-cli/: Cargo.toml  README.md  pyproject.toml
spade-cli/src/: core.rs  lib.rs  main.rs
