[package]
name = "spade-ffi"
version = "0.1.0"
edition = "2021"
authors = ["DTCC Project"]
description = "C FFI bindings for Spade triangulation library"

[lib]
name = "spade_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
spade = { path = "../spade" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
